fix: configuração de CORS